--- a/index.html
+++ b/index.html
@@ -13,14 +13,30 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
-
-
-  <title>Huddle landing page with curved sections</title>
+  <title>Huddle landing page</title>
 </head>
 
 <body>
+    <section class="section-navbar">
+      <nav class="nav">
+        <ul>
+          <li><img src="images/logo.svg" class="nav__logo" alt="nav-logo"></li>
+          <li><a href="#" class="btn btn--white">Try it Free</a></li>
+        </ul>
+      </nav>
+    </section>
 
 
+    <section class="section-intro">
+      <div class="intro">
+        <h1 class="heading__primary">Build The Community Your Fans Will Love</h1>
+        <p class="paragraph__primary">Huddle re-imagines the way we build communities. You have a voice, but so does 
+          your audience. Create connections with your users as you engage in genuine discussion. 
+          </p>
+          <li><a href="#" class="btn btn--white">Try it Free</a></li>
+          <img src="images/screen-mockups.svg" alt="" class="intro__img">
+      </div>
+    </section>
 </body>
 
 </html>
