complete mobile and tablet view

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap"
       rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
@@ -30,7 +31,8 @@
     <section class="section-intro">
       <div class="intro">
         <h1 class="heading__secondary">Build The Community Your Fans Will Love</h1>
-        <p class="paragraph__primary">Huddle re-imagines the way we build communities. You have a <br> voice, but so does
+        <p class="paragraph__primary">Huddle re-imagines the way we build communities. You have a <br> voice, but so
+          does
           your audience. Create connections with your <br> users as you engage in genuine discussion.
         </p>
         <li><a href="#" class="btn btn--white btn--pink">Get Started For Free</a></li>
@@ -75,7 +77,8 @@
           </div>
 
           <div class="grow__image">
-            <img src="images/illustration-grow-together.svg" alt="grow illustration-grow-together" class="growth__image">
+            <img src="images/illustration-grow-together.svg" alt="grow illustration-grow-together"
+              class="growth__image">
           </div>
         </div>
 
@@ -203,14 +206,21 @@
         </div>
 
         <div class="side2">
-          <h3 class="heading__tertiary">NEWSLETTER</h3>
-          <p class="paragraph__secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam,
-            hendrerit lacinia
-            vestibulum a, ultrices quis sem.
-          </p>
+          <div class="side2hp">
+            <h3 class="heading__tertiary">NEWSLETTER</h3>
+            <p class="paragraph__secondary">To recieve tips on how to grow your community, sign up to our weekly
+              newsletter. We’ll never
+              send you spam or pass on your email address
 
-          <input type="email" name="email" placeholder="Email" id="">
-          <a href="#" class="btn btn--white btn--straight">Try it Free</a>
+            </p>
+          </div>
+
+
+          <div class="input__btn">
+            <input type="email" name="email" placeholder="Email" id="">
+            <a href="#" class="btn btn--white btn--straight">Try it Free</a>
+
+          </div>
         </div>
 
       </footer>
